<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:cardCornerRadius="35dp">

    <Button
        android:id="@+id/ln_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/english"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/ln_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/Hindi"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/ln_urdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/Urdu"
        android:textStyle="bold"
        android:textSize="18sp"
        />

</androidx.cardview.widget.CardView>