<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.activities.MovieFullDetailActivity">

            <ImageView
                android:id="@+id/backGroundImage"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/posterCard"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_marginTop="188dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backGroundImage">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person"
                    android:scaleType="fitCenter"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/moviename"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/posterCard"/>

            <TextView
                android:id="@+id/movieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/posterCard"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/movieLanguage"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <TextView
                android:id="@+id/movieLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/language"
                app:layout_constraintTop_toBottomOf="@id/movieName"/>

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/popularity"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language"/>

            <TextView
                android:id="@+id/moviePopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/popularity"
                app:layout_constraintTop_toBottomOf="@id/movieLanguage"/>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/release_date"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularity"/>

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/releaseDate"
                app:layout_constraintTop_toBottomOf="@id/moviePopularity"/>

            <TextView
                android:id="@+id/overView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/overview"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/releaseDate"/>

            <TextView
                android:id="@+id/movieOverView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>