<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shivansh.officetask.viewModels.EntertainmentViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.fragments.drawerNavigationFragments.EntertainmentFragment">

            <TextView
                android:id="@+id/Movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/movies"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="57dp" />

            <TextView
                android:id="@+id/movieSeeALl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/see_all"
                android:onClick="@{() -> viewModel.seeAllMovies()}"
                android:textColor="@color/skyBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="57dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/MoviesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Movies" />

            <TextView
                android:id="@+id/WebSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/web_series"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MoviesRecyclerView" />

            <TextView
                android:id="@+id/webSeriesSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="24sp"
                android:textStyle="bold"
                android:onClick="@{() -> viewModel.seeAllWebShows()}"
                android:textColor="@color/skyBlue"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@id/MoviesRecyclerView"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/WebSeriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/WebSeries" />

            <TextView
                android:id="@+id/celebrity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/celebrities"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/WebSeriesRecyclerView" />

            <TextView
                android:id="@+id/celebritySeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="24sp"
                android:textStyle="bold"
                android:onClick="@{() -> viewModel.seeAllCelebrity()}"
                android:textColor="@color/skyBlue"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@id/WebSeriesRecyclerView"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/celebrityRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/celebrity" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/celebrityRecyclerView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>